# graph-generator

./: CMakeLists.txt  INSTALL  README
debian/: changelog  control  copyright
res/: graph-generator-cpu.service  graph-generator-ds18b20.service  graph-generator-temp.service  index.html  statistics.conf
src/: argp.c  chunks.h  harv_thread.c  main.c  out_thread.c  polyline.c  strcat_realloc.c
